home page ui aligment fix

--- a/client/webUI/src/app/shared/footer/footer.component.html
+++ b/client/webUI/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
  <!-- Footer -->
- <footer class="footer text-center bg-white text-dark align-items-center shadow-sm p-3">
+ <footer class="footer text-center bg-white text-dark align-items-center border-top border-dark p-3">
     &copy; 2024 Your Company. All rights reserved.
 </footer>
