--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -29,7 +29,7 @@
   <!-- /banner section -->
 
   <!-- gift-image-section -->
-  <section class="bg-light shadow-sm">
+  <section class="border-top border-light border-bottom">
     <div class="container py-5">
       <div class="row">
         <div class="col-12 d-flex justify-content-center align-items-center">
@@ -84,7 +84,7 @@
       </div>
     </div>
   </section>
-  <section class="bg-light shadow-sm">
+  <section class="border-top border-light border-bottom">
     <div class="container py-5">
       <div class="row justify-content-between align-items-center">
         <div class="col-12">
