--- a/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
@@ -34,7 +34,7 @@
             <mat-error>This is Required</mat-error>
           </mat-form-field>
           <div class="mt-2">
-            <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2">
+            <button mat-flat-button class="button-mh-60 py-4 text-white bg-dark shadow-sm w-100 me-2">
               Send Request
             </button>
           </div>
