UI update changes

--- a/client/webUI/src/app/shared/employee-footer/employee-footer.component.html
+++ b/client/webUI/src/app/shared/employee-footer/employee-footer.component.html
@@ -1,8 +1,8 @@
 <section class="container-fluid p-0">
     <!-- footer section -->
-    <section class="py-4 bg-dark shadow-sm text-white">
-        <footer class=" container ">
-            <div class=" d-flex justify-content-center align-items-center pt-2 ">
+    <section class="p-3 bg-dark text-white border-top border-dark">
+        <footer class=" container">
+            <div class=" d-flex justify-content-center align-items-center">
                 <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are reserved by ChoiceChase.
             </div>
         </footer>
