--- a/client/webUI/src/app/shared/footer/footer.component.html
+++ b/client/webUI/src/app/shared/footer/footer.component.html
@@ -1,4 +1,11 @@
- <!-- Footer -->
- <footer class="footer text-center bg-white text-dark align-items-center border-top border-dark p-3">
-    &copy; 2024 Your Company. All rights reserved.
-</footer>
+<section class="container-fluid p-0">
+    <!-- footer section -->
+    <section class="p-3 bg-dark text-white border-top border-dark">
+        <footer class=" container">
+            <div class=" d-flex justify-content-center align-items-center">
+                <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are reserved by ChoiceChase.
+            </div>
+        </footer>
+    </section>
+    <!-- /footer section -->
+</section>
