--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,13 +1,17 @@
- <!-- Header -->
- <header class="header bg-white p-3 d-flex justify-content-between align-items-center shadow-sm">
-    <div class="fw-bold text-dark">YourLogo</div>
-    <div class="header-links d-flex">
-        <div class="d-flex align-items-center">
-            <a href="#" class="text-dark text-decoration-none">Profile</a>
-            <a href="#" class="px-3 text-dark text-decoration-none">Notifications</a>
-            <a mat-flat-button [routerLink]="['/admin-login-access']" class="bg-dark py-3 shadow-sm button-mh-45 text-white d-flex py-3 px-4" (click)="logOut()" >
-                <mat-icon>power_settings_new</mat-icon> <span>Log Out</span></a>  
-        </div>              
-    </div>
-</header>
- <!-- /Header -->
+<section class="bg-white border-bottom border-white">
+    <header class="container-fluid d-flex justify-content-between align-items-center py-3">
+        <div class="logo-font">
+            <span class="text-dark fw-bold">Choice</span>
+            <span class="text-primary">Chase</span>
+        </div>
+        <div class="header-links d-flex">
+            <div class="d-flex align-items-center">
+                <a href="#" class="text-dark text-decoration-none">Profile</a>
+                <a href="#" class="px-3 text-dark text-decoration-none">Notifications</a>
+                <a mat-flat-button [routerLink]="['/admin-login-access']"
+                    class="bg-dark py-3 shadow-sm button-mh-45 text-white" (click)="logOut()">
+                    <mat-icon>power_settings_new</mat-icon> <span>Log Out</span></a>
+            </div>
+        </div>
+    </header>
+</section>
