--- a/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/auth/admin-login-access/admin-login-access.component.html
@@ -47,7 +47,7 @@
           </mat-form-field>
           <div class="mt-2">
             <button mat-flat-button class="button-mh-60 py-4 text-white bg-dark shadow-sm w-100 me-2">
-              Send Request
+              <mat-icon>celebration</mat-icon>Manage Rewards
             </button>
           </div>
         </form>
