--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -10,7 +10,7 @@
                 <a href="#" class="px-3 text-dark text-decoration-none">Notifications</a>
                 <a mat-flat-button [routerLink]="['/admin-login-access']"
                     class="bg-dark py-3 shadow-sm button-mh-45 text-white" (click)="logOut()">
-                    <mat-icon>power_settings_new</mat-icon> <span>Log Out</span></a>
+                    <mat-icon>power_settings_new</mat-icon> <span>Logout</span></a>
             </div>
         </div>
     </header>
