--- a/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
@@ -35,7 +35,7 @@
           </mat-form-field>
           <div class="mt-2">
             <button mat-flat-button class="button-mh-60 py-4 text-white bg-dark shadow-sm w-100 me-2">
-              Send Request
+              <mat-icon>celebration</mat-icon>Access your Rewards
             </button>
           </div>
         </form>
