--- a/client/webUI/src/app/shared/employee-header/employee-header.component.html
+++ b/client/webUI/src/app/shared/employee-header/employee-header.component.html
@@ -16,7 +16,7 @@
       >
       }@else if(isSelectGiftPage()){
         <a mat-flat-button [routerLink]="['/employee-code']" class="bg-dark py-3 shadow-sm button-mh-45" (click)="logOut()" >
-            <mat-icon>power_settings_new</mat-icon> <span>Log Out</span></a>
+            <mat-icon>power_settings_new</mat-icon> <span>Logout</span></a>
       }@else if(isRewardClaimedPage()){
         <a mat-flat-button [routerLink]="['/employee-code']" class="bg-dark py-3 shadow-sm button-mh-45">
           <mat-icon>celebration</mat-icon> <span>Back to Home</span></a>
