--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -22,8 +22,8 @@
     <a
       mat-flat-button
       [routerLink]="['/admin/add-gift-item']"
-      class="bg-dark py-3 shadow-sm button-mh-45 text-white py-3 px-4"
-    >
+      class="bg-dark py-3 shadow-sm button-mh-60 text-white py-3 px-4"
+      ><mat-icon>add</mat-icon>
       <span>Add Product</span>
     </a>
   </div>
@@ -57,13 +57,21 @@
       </ng-container>
       <ng-container matColumnDef="productImage">
         <th mat-header-cell *matHeaderCellDef>Product Image</th>
-        <td mat-cell *matCellDef="let element"> <div class="p-3">  <img style="height: 50px;" src="{{element.productImage}}"  alt="image"> </div></td>
+        <td mat-cell *matCellDef="let element">
+          <div class="p-3">
+            <img
+              style="height: 50px"
+              src="{{ element.productImage }}"
+              alt="image"
+            />
+          </div>
+        </td>
       </ng-container>
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
-          <mat-icon >edit</mat-icon
-          ><mat-icon>delete</mat-icon>
+          <mat-icon class="me-2">edit_square</mat-icon
+          ><mat-icon (click)="openDialog()">delete</mat-icon>
         </td>
       </ng-container>
 
@@ -79,3 +87,31 @@
     </mat-paginator>
   </div>
 </mat-card>
+
+<ng-template #content>
+  <div mat-dialog-title class="banner-font fw-bold">Delete Product!</div>
+
+  <mat-dialog-content
+    >This will delete the product and cannot be undone.</mat-dialog-content
+  >
+
+  <mat-dialog-actions>
+    <button
+      mat-button
+      class="bg-dark text-white shadow-sm button-mh-45 py-3 px-4"
+      mat-dialog-close
+    >
+      <mat-icon>cancel</mat-icon>
+      Cancel
+    </button>
+    <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
+    <button
+      mat-button
+      class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4"
+      [mat-dialog-close]="true"
+    >
+      <mat-icon>delete</mat-icon>
+      Delete
+    </button>
+  </mat-dialog-actions>
+</ng-template>
