--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -7,14 +7,8 @@
 >
   <div class="d-flex justify-content-between">
     <mat-form-field>
-      <!-- <mat-label>Search</mat-label> -->
-      <input
-        matInput
-        type="text"
-        placeholder="Search"
-        name="search"
-        [(ngModel)]="search"
-      />
+      <mat-label>Search</mat-label>
+      <input matInput (keyup)="applyFilter($event)" type="text" name="search" />
       <button matSuffix mat-icon-button aria-label="Search">
         <mat-icon>search</mat-icon>
       </button>
@@ -22,12 +16,11 @@
     <a
       mat-flat-button
       [routerLink]="['/admin/add-gift-item']"
-      class="bg-dark py-3 shadow-sm button-mh-60 text-white py-3 px-4"
+      class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4"
       ><mat-icon>add</mat-icon>
       <span>Add Product</span>
     </a>
   </div>
-
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
       <!-- Position Column -->
@@ -39,7 +32,9 @@
       <!-- Name Column -->
       <ng-container matColumnDef="couponCode">
         <th mat-header-cell *matHeaderCellDef>Coupon Code</th>
-        <td mat-cell *matCellDef="let element">{{ element.couponCode }}</td>
+        <td mat-cell *matCellDef="let element">
+          {{ element.couponCode }}
+        </td>
       </ng-container>
 
       <!-- Weight Column -->
@@ -70,15 +65,23 @@
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
-          <mat-icon class="me-2">edit_square</mat-icon
-          ><mat-icon (click)="openDialog()">delete</mat-icon>
+          <mat-icon
+            routerLink="/admin/edit-gift-item/{{ element.position }}"
+            class="me-2"
+            >edit_square</mat-icon
+          >
+          <mat-icon (click)="openDialog()">delete</mat-icon>
         </td>
       </ng-container>
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-
+    <div
+      class="d-flex justify-content-center noResultFoundText"
+      *ngIf="dataSource.filteredData.length === 0"
+    >
+      No results found for your search.
+    </div>
     <mat-paginator
       [pageSizeOptions]="[5, 10, 20]"
       showFirstLastButtons
@@ -87,14 +90,11 @@
     </mat-paginator>
   </div>
 </mat-card>
-
 <ng-template #content>
   <div mat-dialog-title class="banner-font fw-bold">Delete Product!</div>
-
   <mat-dialog-content
     >This will delete the product and cannot be undone.</mat-dialog-content
   >
-
   <mat-dialog-actions>
     <button
       mat-button
