--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -12,32 +12,20 @@
             <mat-icon matSuffix>vpn_key</mat-icon>           
             <mat-error>This is Required</mat-error> 
           </mat-form-field>
-
           <h4 class="fw-bold mb-1">Product Image</h4>
-          <mat-form-field appearance="outline" class="d-block input-lg input">           
-              <input matInput readonly />
-              <mat-icon matSuffix>cloud_upload</mat-icon>                          
-            <input formControlName="productImage" type="file" id="fileInput" name="fileInput" accept="image/*" multiple
-              (change)="selectFiles($event)" />
+          <mat-form-field appearance="outline" class="d-block input-lg input">
+            <div class="d-flex"><input readonly matInput formControlName="productImage" [value]="selectedFiles?.name || ''"/>
+              @if (selectedFiles?.name) {                          
+              <mat-icon (click)="removeImage()" >delete</mat-icon>}
+            </div>
+              <mat-error>This is Required</mat-error>
+              @if (!selectedFiles?.name) {     
+              <mat-icon matSuffix>cloud_upload</mat-icon>
+            }
+              @if (!selectedFiles?.name) {                          
+            <input  formControlName="productImage" type="file" id="fileInput" name="fileInput" accept="image/*" multiple
+              (change)="selectFiles($event)" />}
           </mat-form-field>
-          @if (this.addGiftItemForm.get("productImage")?.hasError("required") &&
-          submitted) {
-          <mat-error>This is Required</mat-error> } @if (selectedFiles) {
-          <mat-card appearance="outlined">
-            <mat-card-content>
-              <div class="row imageName-row">
-                <div class="col-1"><mat-icon fontIcon="home"></mat-icon></div>
-                <div class="col-10">
-                  <span>{{ selectedFiles?.name }}</span>
-                </div>
-                <div class="col-1">
-                  <mat-icon (click)="removeImage()" fontIcon="delete"></mat-icon>
-                </div>
-              </div>
-            </mat-card-content>
-          </mat-card>
-          }
-
           <h4 class="fw-bold mb-1">Product Title</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <input matInput formControlName="productTitle" />
