changes in textarea in add gift component

--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -4,7 +4,7 @@
   <section class="container d-flex justify-content-center align-items-center my-5">
     <div class="row justify-content-center align-items-center">
       <!-- image-section -->
-      <div class="col-6">
+      <div class="col-6 pe-4">
         <div>
           <div class="banner-font fw-bold">
             Design New,<span class="text-primary"> Rewards!</span>
@@ -56,34 +56,37 @@
           <h4 class="fw-bold mb-1">Coupon Code</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <input matInput formControlName="couponCode" />
-            <mat-icon matSuffix>vpn_key</mat-icon>           
-            <mat-error>This is Required</mat-error> 
+            <mat-icon matSuffix>vpn_key</mat-icon>
+            <mat-error>This is Required</mat-error>
           </mat-form-field>
           <h4 class="fw-bold mb-1">Product Image</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
-            <div class="d-flex"><input readonly matInput formControlName="productImage" [value]="selectedFiles?.name || ''"/>
-              @if (selectedFiles?.name) {                          
+            <div class="d-flex"><input readonly matInput formControlName="productImage"
+                [value]="selectedFiles?.name || ''" />
+              @if (selectedFiles?.name) {
               <mat-icon (click)="removeImage()" class="delete-btn">delete</mat-icon>}
             </div>
-              <mat-error>This is Required</mat-error>
-              @if (!selectedFiles?.name) {     
-              <mat-icon matSuffix>cloud_upload</mat-icon>
+            <mat-error>This is Required</mat-error>
+            @if (!selectedFiles?.name) {
+            <mat-icon matSuffix>cloud_upload</mat-icon>
             }
-              @if (!selectedFiles?.name) {                          
-            <input  formControlName="productImage" type="file" id="fileInput" name="fileInput" accept="image/*" multiple
+            @if (!selectedFiles?.name) {
+            <input formControlName="productImage" type="file" id="fileInput" name="fileInput" accept="image/*" multiple
               (change)="selectFiles($event)" />}
           </mat-form-field>
           <h4 class="fw-bold mb-1">Product Title</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <input matInput formControlName="productTitle" />
-            <mat-icon matSuffix>redeem</mat-icon>           
-            <mat-error>This is Required</mat-error> 
+            <mat-icon matSuffix>redeem</mat-icon>
+            <mat-error>This is Required</mat-error>
           </mat-form-field>
 
-          <div class="d-flex"><h4 class="fw-bold mb-1">Product Description</h4><small class="pt-3 ps-2 text-danger">max character limit 200</small></div>
-          
+          <div class="d-flex">
+            <h4 class="fw-bold mb-1">Product Description</h4><small class="pt-3 ps-2 text-danger">max character limit
+              200</small>
+          </div>
           <mat-form-field appearance="outline" class="d-block input-lg input">
-            <textarea matInput formControlName="productDescription"></textarea>
+            <textarea matInput formControlName="productDescription" rows="5" ></textarea>
             <mat-error *ngIf="addGiftItemForm.get('productDescription')?.hasError('required')">
               This is Required
             </mat-error>
@@ -91,7 +94,7 @@
               Maximum 200 characters allowed.
             </mat-error>
           </mat-form-field>
-         
+
           <div class="mt-2">
             <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2">
               <mat-icon>celebration</mat-icon>Create Reward
@@ -100,9 +103,8 @@
         </form>
         <!-- input-box -->
       </div>
-      
     </div>
   </section>
-  <!-- main-section -->
+  <!-- /main-section -->
 </section>
 <!-- /container-section -->
