--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -49,12 +49,12 @@
           </mat-card>
         </div>
       </div>
-      <!-- image-section -->
+      <!-- /image-section -->
       <div class="col-6">
         <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
           <mat-card-content class="d-block">
         <!-- input-box -->
-        <form [formGroup]="addGiftItemForm" (ngSubmit)="onSubmit()" class="mt-5">
+        <form [formGroup]="addGiftItemForm" (ngSubmit)="onSubmit()">
           <h4 class="fw-bold mb-1">Coupon Code</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <input matInput formControlName="couponCode" />
