changes in add gift item

--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -9,8 +9,7 @@
           <div class="banner-font fw-bold">
             Design New,<span class="text-primary"> Rewards!</span>
           </div>
-          <p>Create unique and exciting rewards!Design engaging, tailored perks that make every experience
-            unforgettable.Create something fresh to engage and delight your audience.</p>
+          <p>Create unique and exciting rewards!Design perks that truly stand out.</p>
           <mat-card class="bg-white shadow-sm product-reward-card p-3 mt-3" appearance="outlined">
             <mat-card-content class="d-block">
               <span class="badge shadow-sm bg-dark text-white fs-12">{{
