--- a/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/add-gift-item/add-gift-item.component.html
@@ -4,12 +4,12 @@
   <section class="container d-flex justify-content-center align-items-center my-5">
     <div class="row justify-content-center align-items-center">
       <!-- image-section -->
-      <div class="col-4 pe-4">
+      <div class="col-5 pe-4">
         <div>
           <div class="banner-font fw-bold">
             Design New,<span class="text-primary"> Rewards!</span>
           </div>
-          <p>Create unique and exciting rewards!Design perks that truly stand out.</p>
+          <p>Shape Experiences, One Reward at a Time!</p>
           <mat-card class="bg-white shadow-sm product-reward-card p-3 mt-3" appearance="outlined">
             <mat-card-content class="d-block">
               <span class="badge shadow-sm bg-dark text-white fs-12">{{
@@ -49,7 +49,8 @@
         </div>
       </div>
       <!-- /image-section -->
-      <div class="col-5">
+      <div class="col-5 position-relative">
+        <img class="curve-image" alt="curve Image" src="assets/images/curved-arrow.png" />
         <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
           <mat-card-content class="d-block">
         <!-- input-box -->
@@ -83,8 +84,8 @@
           </mat-form-field>
 
           <div class="d-flex">
-            <h4 class="fw-bold mb-1">Product Description</h4><small class="pt-3 ps-2 text-danger">max character limit
-              200</small>
+            <h4 class="fw-bold mb-1">Product Description</h4><small class="pt-3 ps-1 text-danger">(max char
+              200)</small>
           </div>
           <mat-form-field appearance="outline" class="d-block input-lg input">
             <textarea matInput formControlName="productDescription" rows="5"></textarea>
