updated edit gift item

--- a/client/webUI/src/app/pages/admin/edit-gift-item/edit-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/edit-gift-item/edit-gift-item.component.html
@@ -97,7 +97,7 @@
             </mat-form-field>
             <div class="mt-2">
               <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2">
-                <mat-icon>celebration</mat-icon>Create Reward
+                <mat-icon>celebration</mat-icon>Update Reward
               </button>
             </div>
           </form>
