--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -108,7 +108,7 @@
     <button
       mat-button
       class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4"
-      [mat-dialog-close]="true"
+      [mat-dialog-close]="true" (click)="matDelete()"
     >
       <mat-icon>delete</mat-icon>
       Delete
