--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -1,37 +1,35 @@
-<div class="banner-font fw-bold mb-3">
-  Gift<span class="text-primary"> Inventory!</span>
+<div>
+  <h3 class="fw-bold mb-4">Gift Inventory</h3>
 </div>
-<mat-card
-  class="bg-white shadow-sm product-reward-card p-3"
-  appearance="outlined"
->
+<mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
   <div class="d-flex justify-content-between">
-    <mat-form-field>
-      <mat-label>Search</mat-label>
-      <input matInput (keyup)="applyFilter($event)" type="text" name="search" />
+    <!-- searchbar -->
+    <mat-form-field appearance="outline">
+      <input matInput (keyup)="applyFilter($event)" type="text" name="search" placeholder="Search..." />
       <button matSuffix mat-icon-button aria-label="Search">
         <mat-icon>search</mat-icon>
       </button>
     </mat-form-field>
-    <a
-      mat-flat-button
-      [routerLink]="['/admin/add-gift-item']"
-      class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4"
-      ><mat-icon>add</mat-icon>
+    <!-- /searchbar -->
+    <!-- add product button -->
+    <a mat-flat-button [routerLink]="['/admin/add-gift-item']"
+      class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4"><mat-icon>add</mat-icon>
       <span>Add Product</span>
     </a>
+    <!-- /add product button -->
   </div>
-  <div class="mat-elevation-z8">
+  <!-- table -->
+  <div>
     <table mat-table [dataSource]="dataSource">
       <!-- Position Column -->
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold">No.</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="couponCode">
-        <th mat-header-cell *matHeaderCellDef>Coupon Code</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold">Coupon Code</th>
         <td mat-cell *matCellDef="let element">
           {{ element.couponCode }}
         </td>
@@ -39,79 +37,58 @@
 
       <!-- Weight Column -->
       <ng-container matColumnDef="productTitle">
-        <th mat-header-cell *matHeaderCellDef>Product Title</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold">Product Title</th>
         <td mat-cell *matCellDef="let element">{{ element.productTitle }}</td>
       </ng-container>
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="productDescription">
-        <th mat-header-cell *matHeaderCellDef>Product Description</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold">Product Description</th>
         <td mat-cell *matCellDef="let element">
           {{ element.productDescription }}
         </td>
       </ng-container>
       <ng-container matColumnDef="productImage">
-        <th mat-header-cell *matHeaderCellDef>Product Image</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold">Product Image</th>
         <td mat-cell *matCellDef="let element">
           <div class="p-3">
-            <img
-              style="height: 50px"
-              src="{{ element.productImage }}"
-              alt="image"
-            />
+            <img style="height: 50px" src="{{ element.productImage }}" alt="image" />
           </div>
         </td>
       </ng-container>
       <ng-container matColumnDef="Action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold">Action</th>
         <td mat-cell *matCellDef="let element">
-          <mat-icon
-            routerLink="/admin/edit-gift-item/{{ element.position }}"
-            class="me-2"
-            >edit_square</mat-icon
-          >
+          <mat-icon routerLink="/admin/edit-gift-item/{{ element.position }}" class="me-2">edit_square</mat-icon>
           <mat-icon (click)="openDialog()">delete</mat-icon>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <div
-      class="d-flex justify-content-center noResultFoundText"
-      *ngIf="dataSource.filteredData.length === 0"
-    >
+    <!-- /table -->
+    <div class="d-flex justify-content-center noResultFoundText" *ngIf="dataSource.filteredData.length === 0">
       No results found for your search.
     </div>
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements"
-    >
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
     </mat-paginator>
   </div>
 </mat-card>
+<!-- dialog -->
 <ng-template #content>
   <div mat-dialog-title class="banner-font fw-bold">Delete Product!</div>
-  <mat-dialog-content
-    >This will delete the product and cannot be undone.</mat-dialog-content
-  >
+  <mat-dialog-content>This will delete the product and cannot be undone.</mat-dialog-content>
   <mat-dialog-actions>
-    <button
-      mat-button
-      class="bg-dark text-white shadow-sm button-mh-45 py-3 px-4"
-      mat-dialog-close
-    >
+    <button mat-button class="bg-dark text-white shadow-sm button-mh-45 py-3 px-4" mat-dialog-close>
       <mat-icon>cancel</mat-icon>
       Cancel
     </button>
     <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-    <button
-      mat-button
-      class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4"
-      [mat-dialog-close]="true" (click)="matDelete()"
-    >
+    <button mat-button class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4" [mat-dialog-close]="true"
+      (click)="matDelete()">
       <mat-icon>delete</mat-icon>
       Delete
     </button>
   </mat-dialog-actions>
 </ng-template>
+<!-- /dialog -->
