--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -1,7 +1,7 @@
 <div>
-  <h3 class="fw-bold mb-4">Gift Inventory</h3>
+  <h5 class="fw-bold mb-4">Gift Inventory</h5>
 </div>
-<mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
+<mat-card class="bg-white shadow-sm border-light product-reward-card p-3" appearance="outlined">
   <div class="d-flex justify-content-between">
     <!-- searchbar -->
     <mat-form-field appearance="outline">
@@ -18,9 +18,11 @@
     </a>
     <!-- /add product button -->
   </div>
-  <!-- table -->
+  
+  <!-- table reference with search and pagination -->
   <div>
-    <table mat-table [dataSource]="dataSource">
+    <!-- table -->
+    <table mat-table [dataSource]="dataSource" class="bg-white border border-light">
       <!-- Position Column -->
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef class="fw-bold">No.</th>
@@ -67,12 +69,13 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
     <!-- /table -->
-    <div class="d-flex justify-content-center noResultFoundText" *ngIf="dataSource.filteredData.length === 0">
-      No results found for your search.
+    <div class="d-flex justify-content-center mt-2 fw-bold" *ngIf="dataSource.filteredData.length === 0">
+      No result found.
     </div>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    <mat-paginator class="bg-white" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
     </mat-paginator>
   </div>
+<!-- /table reference with search and pagination -->
 </mat-card>
 <!-- dialog -->
 <ng-template #content>
