--- a/client/webUI/src/app/shared/employee-header/employee-header.component.html
+++ b/client/webUI/src/app/shared/employee-header/employee-header.component.html
@@ -1,4 +1,4 @@
-<section class="bg-light border-bottom border-light">
+<section class="bg-white border-bottom border-light">
     <header
       class="container d-flex justify-content-between align-items-center py-3"
     >
