--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<section class="bg-white border-bottom border-white">
+<section class="bg-white border-bottom border-light">
     <header class="container-fluid d-flex justify-content-between align-items-center py-3">
         <div class="logo-font">
             <span class="text-dark fw-bold">Choice</span>
