--- a/client/webUI/src/styles.css
+++ b/client/webUI/src/styles.css
@@ -79,7 +79,19 @@ textarea {
   color: #e9af0b !important;
 }
 
+/*table*/
+td, th {
+  border-right: 1px solid !important;    
+}
 
+td, th{
+  border-color: #e9ecf5 !important;
+}
+
+td:last-child, th:last-child {
+  border-right: none !important;
+} 
+/*/table*/
 
 /*================================================================================================
  bootstrap v5.3.2 responsiveness of template.
@@ -5614,7 +5626,7 @@ p {
 }
 
 .border-light {
-  border-color: #f8f9fa !important;
+  border-color: #e9ecf5 !important;
 }
 
 .border-dark {
