--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -25,13 +25,13 @@
     <table mat-table [dataSource]="dataSource" class="bg-white border border-light">
       <!-- Position Column -->
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef class="fw-bold">No.</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">No.</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="couponCode">
-        <th mat-header-cell *matHeaderCellDef class="fw-bold">Coupon Code</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Coupon Code</th>
         <td mat-cell *matCellDef="let element">
           {{ element.couponCode }}
         </td>
@@ -39,19 +39,19 @@
 
       <!-- Weight Column -->
       <ng-container matColumnDef="productTitle">
-        <th mat-header-cell *matHeaderCellDef class="fw-bold">Product Title</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Title</th>
         <td mat-cell *matCellDef="let element">{{ element.productTitle }}</td>
       </ng-container>
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="productDescription">
-        <th mat-header-cell *matHeaderCellDef class="fw-bold">Product Description</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Description</th>
         <td mat-cell *matCellDef="let element">
           {{ element.productDescription }}
         </td>
       </ng-container>
       <ng-container matColumnDef="productImage">
-        <th mat-header-cell *matHeaderCellDef class="fw-bold">Product Image</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Image</th>
         <td mat-cell *matCellDef="let element">
           <div class="p-3">
             <img style="height: 50px" src="{{ element.productImage }}" alt="image" />
@@ -59,7 +59,7 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="Action">
-        <th mat-header-cell *matHeaderCellDef class="fw-bold">Action</th>
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
         <td mat-cell *matCellDef="let element">
           <mat-icon routerLink="/admin/edit-gift-item/{{ element.position }}" class="me-2">edit_square</mat-icon>
           <mat-icon (click)="openDialog()">delete</mat-icon>
@@ -69,7 +69,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
     <!-- /table -->
-    <div class="d-flex justify-content-center mt-2 fw-bold" *ngIf="dataSource.filteredData.length === 0">
+    <div class="d-flex justify-content-center mt-2 fw-bold bg-light" *ngIf="dataSource.filteredData.length === 0">
       No result found.
     </div>
     <mat-paginator class="bg-white" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
