--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -1,7 +1,7 @@
 <div>
   <h5 class="fw-bold mb-4">Gift Inventory</h5>
 </div>
-<mat-card class="bg-white shadow-sm border-light product-reward-card p-3" appearance="outlined">
+<mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
   <div class="d-flex justify-content-between">
     <!-- searchbar -->
     <mat-form-field appearance="outline">
